# BasScript

./: Cargo.toml  plan.md
app/: Cargo.toml
app/src/: main.rs
core/: Cargo.toml
core/src/: buffer.rs  lib.rs  links.rs  model.rs  parser.rs
core/src/links/: entities.rs  mod.rs  syntax.rs  tests.rs
core/src/parser/: fountain.rs  markdown.rs  mod.rs  shared.rs
docs/: humanDOC.md  specsheet.md
scripts/: editor_settings.ron  keybinds.ron  settings.toml
settings/: editor_settings.ron  keybinds.ron  state.ron  theme.ron
ui/: Cargo.toml
ui/src/: lib.rs
ui/src/editor/: caret.rs  core.rs  dialogs.rs  editing.rs  mod.rs  processed.rs  render.rs  selection.rs  settings.rs  splitters.rs  status_line.rs  ui_setup.rs
ui/src/editor/linking/: interaction.rs  mod.rs  navigation.rs
ui/src/editor/rendering/: fountain.rs  markdown.rs  mod.rs  shared.rs
ui/src/editor/scrolling/: plain.rs  processed.rs
ui/src/editor/scrolling/modes/: ctrl_left_drag.rs  middle_autoscroll.rs  shared.rs  wheel.rs
ui/src/editor/scrolling/panels/: processed.rs
ui/src/pannels/text/: explorer.rs  processed.rs
ui/src/pannels/text/scrolling/modes/: ctrl_left_drag.rs  middle_autoscroll.rs  wheel.rs
