[package]
name = "basscript-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
basscript-core = { path = "../core" }
rfd = "0.15"
resvg = "0.45"
winit = "0.30"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
window-vibrancy = "0.7.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
